--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -183,10 +183,13 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
 
+      - name: Install Gosec
+        run: |
+          go install github.com/securecodewarrior/gosec/v2/cmd/gosec@latest
+
       - name: Run Gosec Security Scanner
-        uses: securecodewarrior/github-action-gosec@master
-        with:
-          args: "./..."
+        run: |
+          gosec ./...
 
   dependency-review:
     name: Dependency Review
