--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -149,7 +149,7 @@ jobs:
 
       - name: Run Gosec Security Scanner
         run: |
-          gosec -fmt sarif -out gosec.sarif ./...
+          gosec -no-fail -fmt sarif -out gosec.sarif ./...
 
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v3
